# matter-sdk

./: .gitmodules  BUILD.gn  README.md  matter_wpan_executable.gni  matter_wpan_sdk.gni
.github/workflows/: restyle.yaml
boards/: args.gni
boards/CYW30739B2-P5-EVK-01/: args.gni  design.modus
boards/CYW30739B2-P5-EVK-03/: args.gni  design.modus
boards/CYW930739M2EVB-01/: args.gni
boards/CYW930739M2EVB-02/: args.gni
cyw30739/: BUILD.gn  cyw30739_executable.gni  cyw30739_sdk.gni  flash.btp
cyw30739/chips/: 30739B2.gni
scripts/: btp_reader.py  compress_cgs_data.py  find_mtb_tools_path.py  gen_optiga_provisioning_data.py  gen_ota_image.py  gen_pake_verifier.py  gen_ss_cgs.py  gen_ss_hex.py  merge_hex.py  optiga_v3.cddl  wiced-gen-ld.pl
