# Copyright (c) 2023 Project CHIP Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Enable the on-board display
board_enable_display = false

# Enable the I2C interface
board_enable_i2c = false

# Board Serial Wire Clock Pin
board_swclk_pin = ""

# Board Serial Wire Data I/O Pin
board_swdio_pin = ""

# Use the OPTIGA
board_use_optiga = false

# Use the external flash
board_use_external_flash = false

# OTA upgrade size in the external flash
board_external_flash_ota_upgrade_size = "0x00100000"

board_defines = []
